# uit-ai-assistant

./: .coverage  .gitignore  check_db.py  content.md  context_distillation_example.py  pyproject.toml  requirements.txt  test_context_distillation.py  test_daa_cookie_expiry.py  test_flatten.py  test_memory_inspect.py  test_query.py  test_query_refiner.py  test_stage_directly.py
agent/: pyproject.toml
apps/agent/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
apps/agent/src/config/: __init__.py  llm_provider.py  prompts.py  settings.py
apps/agent/src/core/: agent.py
apps/agent/src/graph/: agent_graph.py  checkpointer.py  nodes.py  state.py
apps/agent/src/grpc/: __init__.py  __main__.py  agent_pb2.py  agent_pb2_grpc.py  agent_server.py
apps/agent/src/grpc/pb/: __init__.py  agent_pb2.pyi  agent_pb2_grpc.py
apps/agent/src/query_refinement/: acronyms.yaml  refiner.py
apps/agent/src/tools/: credential_tool.py  mcp_loader.py
apps/agent/src/utils/: logger.py
apps/agent/test/: test_edge_cases.py
apps/benchmark/: .gitignore  README.md  pyproject.toml
apps/benchmark/data/: quy_che_dao_tao_50_new.json  quy_che_dao_tao_test.json  quy_che_dao_tao_test_50.json  regulation_full_test.json  regulation_test_10.json  regulation_test_full.json  regulation_test_sample.json
apps/benchmark/data/regulation/: group1_tin_chi.json  group2_ngoai_ngu.json  group3_van_bang.json  group4_to_chuc_thi.json  group5_kltn.json  group6_chinh_sach.json
apps/benchmark/scripts/: merge_testsets.py  prepare_testset.py  run_evaluation.py
apps/knowledge-builder/: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  run_dashboard.py
apps/knowledge-builder/archived/crawler/: crawler_core.py  crawler_helper.py  daa_crawler.py
apps/knowledge-builder/archived/crawler/filters/: daa_filter.py
apps/knowledge-builder/src/commands/: __init__.py  clean.py  crawl.py  fix_markdown.py  index.py  metadata.py  migrate.py  pipeline.py  process.py  reparse_file.py  stage.py  status.py
apps/knowledge-builder/src/config/: llm_provider.py  settings.py
apps/knowledge-builder/src/crawler/: crawler_core.py  crawler_helper.py  daa_crawler.py
apps/knowledge-builder/src/dashboard/: README.md  __init__.py  app.py  utils.py
apps/knowledge-builder/src/dashboard/components/: __init__.py
apps/knowledge-builder/src/indexing/: PARSERS_README.md  indexer.py
apps/knowledge-builder/src/indexing/splitters/: __init__.py  base_node_splitter.py  curriculum_node_splitter.py  regulation_node_splitter.py
apps/knowledge-builder/src/pipeline/: __init__.py  indexing_pipeline.py  processing_pipeline.py
apps/knowledge-builder/src/pipeline/core/: __init__.py  pipeline_state.py  stage.py
apps/knowledge-builder/src/pipeline/stages/: __init__.py  chunk_stage.py  clean_stage.py  embed_index_stage.py  filter_stage.py  fix_markdown_stage.py  flatten_table_stage.py  metadata_stage.py  normalize_stage.py  parse_stage.py
apps/knowledge-builder/src/processing/: content_filter.py  llm_markdown_fixer.py  pipeline_metadata.py  pipeline_parse_clean.py
apps/knowledge-builder/src/processing/cleaner/: cleaner_factory.py  uit_website_cleaner.py
apps/knowledge-builder/src/processing/metadata_generator/: base_metadata_generator.py  curriculum_metadata_generator.py  default_metadata_generator.py  metadata_generator_factory.py  metadata_models.py  regulation_metadata_generator.py
apps/knowledge-builder/src/processing/parser/: docx_parser.py  llama_parser.py  parser_factory.py  pdf_parser.py  xlsx_parser.py
apps/knowledge-builder/src/processing/pipelines/: metadata_pipeline.py  parse_clean_pipeline.py
apps/knowledge-builder/src/processing/steps/: content_filter.py  markdown_fixer.py
apps/knowledge-builder/src/utils/: file_finder.py
apps/mcp-server/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
apps/mcp-server/src/config/: llm_provider.py  settings.py
apps/mcp-server/src/retriever/: context_distillation.py  filters.py  formatters.py  hyde.py  program_filter.py  query_engine.py  reranker.py  retrievers.py  schemas.py
apps/mcp-server/src/routing/: llm_classification_router.py  router_factory.py
apps/mcp-server/src/scraper/: daa_scraper.py  utils.py
apps/mcp-server/src/scraper/models/: base.py
apps/mcp-server/src/tools/: daa_scraping_tools.py  retrieval_tools.py
apps/mcp-server/src/utils/: logger.py
backend/: Dockerfile  go.mod  go.sum  main.go  pyproject.toml
docs/: LATENCY_ANALYSIS.md  regulation_test.xlsx  tom_tat_uit_ai_assistant.docx
infra/: README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
modal/: README.md  reranker_service.py
notebooks/: test_crawler.ipynb
proto/: agent.proto
src/: cli.py  fix_datetime_issue.py  main.py  (+3 more)
(+424 files in other folders)
