[project]
name = "agent-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "grpcio-tools>=1.76.0",
    "langchain>=1.1.3",
    "langchain-core>=1.2.0",
    "langchain-google-genai>=4.0.0",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.3",
    "langgraph>=1.0.5",
    "langgraph-checkpoint-postgres>=3.0.2",
    "psycopg>=3.3.2",
    "psycopg-pool>=3.3.0",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
]
