[project]
name = "benchmark"
version = "0.1.0"
description = "RAG evaluation benchmark for UIT AI Assistant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ragas>=0.2.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "datasets>=2.0.0",
    "openai>=1.0.0",
    "google-generativeai>=0.8.0",
    "langchain-openai>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
